Fixed dark mode background-color and resource btn color

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -168,6 +168,7 @@ p {
 }
 .dropdown:hover {
   background-color: rgba(99, 181, 255, 1);
+  transition: 0.5s;
 }
 
 #landing {
@@ -552,7 +553,7 @@ label {
 }
 
 body.dark {
-  background-color: #292c35;
+  background: #292c35;
   color: #fff;
 }
 
@@ -578,7 +579,10 @@ body.dark .dropdown:hover {
 }
 body.dark .dropdown #dropdownMenuButton1 {
   background-color: #292c35;
-  color: #fff;
+  color:  #63b5ff;
+}
+body.dark .dropdown:hover #dropdownMenuButton1 {
+color:#fff;
 }
 body.dark .dropdown-menu {
   background-color: #292c35;
